--- a/apps/dashboard/tsconfig.spec.json
+++ b/apps/dashboard/tsconfig.spec.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"],
-    "jsx": "react"
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "include": [
     "**/*.test.ts",
@@ -16,5 +18,9 @@
     "**/*.test.jsx",
     "**/*.spec.jsx",
     "**/*.d.ts"
+  ],
+  "files": [
+    "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
+    "../../node_modules/@nrwl/react/typings/image.d.ts"
   ]
 }
