--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "@nrwl/jest": "13.5.2",
     "@nrwl/linter": "13.5.2",
     "@nrwl/nest": "^13.5.2",
-    "@nrwl/next": "^13.5.2",
     "@nrwl/node": "13.5.2",
-    "@nrwl/react": "^13.5.2",
+    "@nrwl/react": "^13.5.3",
     "@nrwl/tao": "13.5.2",
     "@nrwl/web": "13.5.2",
     "@nrwl/workspace": "13.5.2",
@@ -29,6 +28,7 @@
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/react-router-dom": "5.3.1",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "babel-jest": "27.2.3",
@@ -52,11 +52,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nrwl/next": "13.5.2",
     "core-js": "^3.6.5",
-    "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
