--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "babel-jest": "27.2.3",
+    "bootstrap": "^5.1.3",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.7",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
     "prettier": "^2.5.1",
+    "react-bootstrap": "^2.1.1",
     "react-test-renderer": "17.0.2",
     "sass": "1.43.2",
     "ts-jest": "27.0.5",
