--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nrwl/tao": "13.5.2",
     "@nrwl/web": "13.5.2",
     "@nrwl/workspace": "13.5.2",
+    "@react-google-maps/api": "^2.7.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
